--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,17 +4,20 @@ body {
 	background: #233a40; 
 }
 
-// TYPOGRAPHY ////////////////////////////////
+// TWINKLE LAYER ////////////////////////////////
 /////////////////////////////////////////////////
-p {
-	font: 16px/1.8 "Lato", sans-serif;
-	letter-spacing: 0.075em;
-	color:#fff;
-	margin: 5% auto 5%;
+.layer{
+	position:absolute;
+	top:0;
+	left:0;
+	width: 100%;
+	height: 100%;
 }
 
+// HERO TEXT ////////////////////////////////////
+/////////////////////////////////////////////////
 .herotext { 
-	font: 36px/0.75 "Lato", sans-serif;
+	font: 36px/0.75 'Lato', sans-serif;
 	text-align: center;
 }
 
@@ -26,16 +29,164 @@ p {
 								#d45848 -4px 4px 0;
 }
 
-// background: rgba(0,0,0,0.2);
-
-// TWINKLE LAYER ////////////////////////////////
+// TYPOGRAPHY ///////////////////////////////////
 /////////////////////////////////////////////////
-.layer{
-  position:absolute;
-  top:0;
-  left:0;
-  width: 100%;
-  height: 100%;
+// BIG HEADER & TEXT ////////
+h2 {
+	margin-top: 20px;
+	color:#fff;
+	letter-spacing: 0.1em;
+	font-family: 'Fredericka the Great', cursive;
+	text-shadow:	#253e45 -1px 1px 0,
+								#253e45 -2px 2px 0,
+								#d45848 -3px 3px 0,
+								#d45848 -4px 4px 0;
+	text-align: center;
 }
 
-.herotext-container { background: red;}
+p {
+	font: 20px/1.8 'Lato', sans-serif;
+	letter-spacing: 0.075em;
+	color:#fff;
+	margin: 5% auto 5%;
+}
+
+// SMALLER HEADER & TEXT ////
+h5 {
+	font-family: 'Lato', sans-serif;
+	letter-spacing: 0.1em;
+	margin-top: 18px;
+	color:#d45848;
+}
+
+hr { margin: 4px 0; }
+
+ul, li {
+	list-style-type: none;
+	font: 14px/1.8 'Lato', sans-serif;
+	letter-spacing: 0.075em;
+	color:#fff;
+	margin: 0;
+}
+
+#skills p {
+	font: 14px/1.8 'Lato', sans-serif;
+	letter-spacing: 0.075em;
+}
+
+.nopadding { padding: 0;}
+
+// BUTTON STYLING ///////////////////////////////
+/////////////////////////////////////////////////
+.button {
+	background: rgba(0,0,0,0.2);
+	border-radius: 7px;
+	margin: 5px;
+}
+
+.nav {text-align: center;} //nav buttons
+
+// FOOTER ///////////////////////////////////////
+/////////////////////////////////////////////////
+#last {margin-bottom: 40px;} //adds space for footer
+
+.footer {
+	background: rgba(0,0,0,0.2);
+	padding-bottom: 20px;
+
+	p {
+		font: 14px/1.8 'Lato', sans-serif;
+		letter-spacing: 0.075em;
+	}
+
+	a {
+		font: 14px/1.8 'Lato', sans-serif;
+		letter-spacing: 0.075em;
+		color: #fff;
+		font-style: italic;
+	}
+
+	img {
+		height: 24px;
+		margin-right: 8px;
+	}
+}
+
+// PULSATING HEART //////////////////////////////
+/////////////////////////////////////////////////
+.heart {
+	color: #d45848;
+	-webkit-animation: heart 1s linear infinite;
+	-moz-animation: heart 1s linear infinite;
+	-ms-animation: heart 1s linear infinite;
+	animation: heart 1s linear infinite;
+}
+
+@keyframes "heart" {
+ 0% {
+		-webkit-transform: scale(1.1);
+		-moz-transform: scale(1.1);
+		-o-transform: scale(1.1);
+		-ms-transform: scale(1.1);
+		transform: scale(1.1);
+ }
+ 50% {
+		-webkit-transform: scale(0.8);
+		-moz-transform: scale(0.8);
+		-o-transform: scale(0.8);
+		-ms-transform: scale(0.8);
+		transform: scale(0.8);
+ }
+ 100% {
+		-webkit-transform: scale(1);
+		-moz-transform: scale(1);
+		-o-transform: scale(1);
+		-ms-transform: scale(1);
+		transform: scale(1);
+ }
+}
+
+@-moz-keyframes heart {
+ 0% {
+	 -moz-transform: scale(1.1);
+	 transform: scale(1.1);
+ }
+ 50% {
+	 -moz-transform: scale(0.8);
+	 transform: scale(0.8);
+ }
+ 100% {
+	 -moz-transform: scale(1);
+	 transform: scale(1);
+ }
+}
+
+@-webkit-keyframes "heart" {
+ 0% {
+	 -webkit-transform: scale(1.1);
+	 transform: scale(1.1);
+ }
+ 50% {
+	 -webkit-transform: scale(0.8);
+	 transform: scale(0.8);
+ }
+ 100% {
+	 -webkit-transform: scale(1);
+	 transform: scale(1);
+ }
+}
+
+@-ms-keyframes "heart" {
+ 0% {
+	 -ms-transform: scale(1.1);
+	 transform: scale(1.1);
+ }
+ 50% {
+	 -ms-transform: scale(0.8);
+	 transform: scale(0.8);
+ }
+ 100% {
+	 -ms-transform: scale(1);
+	 transform: scale(1);
+ }
+}
