--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,14 +10,23 @@ body {
 
 .herotext {
   font: 36px/0.75 'Lato', sans-serif;
+  margin: 5% auto 5%;
   text-align: center; }
 
 .FtG {
   font-family: 'Fredericka the Great', cursive;
   text-shadow: #253e45 -1px 1px 0, #253e45 -2px 2px 0, #d45848 -3px 3px 0, #d45848 -4px 4px 0; }
 
+.profile-photo {
+  border-radius: 50%; }
+
+.first-p {
+  font-size: 36px;
+  color: #d45848;
+  margin: 0; }
+
 h2 {
-  margin-top: 20px;
+  margin: 20px 0;
   color: #fff;
   letter-spacing: 0.1em;
   font-family: 'Fredericka the Great', cursive;
@@ -27,8 +36,7 @@ h2 {
 p {
   font: 20px/1.8 'Lato', sans-serif;
   letter-spacing: 0.075em;
-  color: #fff;
-  margin: 5% auto 5%; }
+  color: #fff; }
 
 h5 {
   font-family: 'Lato', sans-serif;
@@ -57,6 +65,8 @@ ul, li {
   background: rgba(0, 0, 0, 0.2);
   border-radius: 7px;
   margin: 5px; }
+  .button:hover {
+    border: 1px solid #fff; }
 
 .nav {
   text-align: center; }
