--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,7 @@ body {
 /////////////////////////////////////////////////
 .herotext { 
 	font: 36px/0.75 'Lato', sans-serif;
+	margin: 5% auto 5%;
 	text-align: center;
 }
 
@@ -29,11 +30,20 @@ body {
 								#d45848 -4px 4px 0;
 }
 
+// ABOUT SECTION ////////////////////////////////
+/////////////////////////////////////////////////
+.profile-photo { border-radius: 50%; }
+.first-p {
+	font-size: 36px;
+	color: #d45848;
+	margin: 0;
+}
+
 // TYPOGRAPHY ///////////////////////////////////
 /////////////////////////////////////////////////
 // BIG HEADER & TEXT ////////
 h2 {
-	margin-top: 20px;
+	margin: 20px 0;
 	color:#fff;
 	letter-spacing: 0.1em;
 	font-family: 'Fredericka the Great', cursive;
@@ -48,7 +58,7 @@ p {
 	font: 20px/1.8 'Lato', sans-serif;
 	letter-spacing: 0.075em;
 	color:#fff;
-	margin: 5% auto 5%;
+
 }
 
 // SMALLER HEADER & TEXT ////
@@ -82,7 +92,10 @@ ul, li {
 	background: rgba(0,0,0,0.2);
 	border-radius: 7px;
 	margin: 5px;
+
+	&:hover { border: 1px solid #fff; }
 }
+
 
 .nav {text-align: center;} //nav buttons
 
