removed div with id last -- no longer needed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -112,7 +112,7 @@ a {
 
 // FOOTER ///////////////////////////////////////
 /////////////////////////////////////////////////
-#last {margin-bottom: 2.5em;} //adds space for footer
+// #last {margin-bottom: 2.5em;} //adds space for footer
 
 .footer {
 	background: rgba(0,0,0,0.2);
