--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,7 +45,7 @@ a {
 // TWINKLE LAYER ////////////////////////////////
 /////////////////////////////////////////////////
 .layer{
-	position:absolute;
+	position:fixed;
 	top:0;
 	left:0;
 	width: 100%;
