--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,6 +42,8 @@ a {
 	font-style: italic;
 }
 
+.centerText {text-align: center;}
+
 // TWINKLE LAYER ////////////////////////////////
 /////////////////////////////////////////////////
 .layer{
@@ -71,8 +73,6 @@ a {
 
 // NAVIGATION & BUTTON STYLING //////////////////
 /////////////////////////////////////////////////
-.nav {text-align: center;} //nav buttons
-
 .button {
 	font: 1.125em 'Lato', sans-serif;
 	letter-spacing: 0.075em;
@@ -109,6 +109,7 @@ a {
 .empty { clear: both; }
 
 // WORK SECTION /////////////////////////////////
+#work img { 	border-radius: 7px; }
 
 // FOOTER ///////////////////////////////////////
 /////////////////////////////////////////////////
