cleaning git up slider and footer layout

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,7 +6,7 @@ h2 {
 	font-family: 'Fredericka the Great', cursive;
 	letter-spacing: 0.15em;
 	text-align: center;
-	margin: 1.250em 0;
+	margin: 1em 0;
 	color:#fff;
 	text-shadow:	#253e45 -1px 1px 0,
 								#253e45 -2px 2px 0,
@@ -109,7 +109,7 @@ a {
 .empty { clear: both; }
 
 // WORK SECTION /////////////////////////////////
-.slider { margin: 0 30px; } //space for arrows
+.slider { margin: 0 1.875em 1.875em 1.875em; }
 
 // FOOTER ///////////////////////////////////////
 /////////////////////////////////////////////////
