--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,7 +5,7 @@ h2 {
   font-family: 'Fredericka the Great', cursive;
   letter-spacing: 0.15em;
   text-align: center;
-  margin: 1.25em 0;
+  margin: 1em 0;
   color: #fff;
   text-shadow: #253e45 -1px 1px 0, #253e45 -2px 2px 0, #d45848 -3px 3px 0, #d45848 -4px 4px 0; }
 
@@ -85,7 +85,7 @@ a {
   clear: both; }
 
 .slider {
-  margin: 0 30px; }
+  margin: 0 1.875em 1.875em 1.875em; }
 
 .footer {
   background: rgba(0, 0, 0, 0.2);
