changed herotext to be h1 instead of h2; made text white

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,7 @@
 /////////////////////////////////////////////////
 body { background: #233a40; }
 
-h2 {
+h1 {
 	font-family: 'Fredericka the Great', cursive;
 	letter-spacing: 0.15em;
 	text-align: center;
@@ -61,6 +61,7 @@ a {
 .herotext { 
 	font: 2.25em/1.25 'Lato', sans-serif;
 	text-align: center;
+	color: #fff;
 }
 
 .FtG {
