--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -138,54 +138,12 @@ a {
 
 // ICON ROTATE //////////////////////////////////
 /////////////////////////////////////////////////
-svg .icon {
+.icon {
 	height: 24px;
 	width: 24px;
 	fill: #fff;
-}
+	transition: transform 1s ease;
 
-@-webkit-keyframes rotateIcon {
-	from {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg)
-	}
-	to {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg)
-	}
-}
-
-@-moz-keyframes rotateIcon {
-	from {
-		-moz-transform: rotate(0deg);
-		transform: rotate(0deg)
-	}
-	to {
-		-moz-transform: rotate(360deg);
-		transform: rotate(360deg)
-	}
-}
-
-@keyframes rotateIcon {
-	from {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg);
-	}
-	to {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
-}
-
-svg .icon.animated {
-	fill: #008CBA;
-
-	-webkit-transform-origin: 50% 50%;
-	-ms-transform-origin: 50% 50%;
-	transform-origin: 50% 50%;
-
-	-webkit-animation: rotateIcon 1s;
-	-moz-animation: rotateIcon 1s;
-	-o-animation: rotateIcon 1s;
-	animation: rotateIcon 1s;
+	&:after { transition: all 1s ease; }
+	&:hover { transform: rotate(360deg); }
 }
